--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -607,4 +607,7 @@
     <string name="pref_geonav_update_interval_summary">The number of seconds between location updates.</string>
     <string name="pref_geonav_update_interval_title">Update Interval</string>
     <string name="pref_geonav_pair">Pair Device</string>
+    <string name="activity_collect_sensor_manager_failed">Failed to start sensor manager.</string>
+    <string name="activity_collect_geomagnetic_noise_detected">Interference detected, the compass might not be accurate.</string>
+    <string name="activity_collect_geonav_starting">Starting GeoNav search.</string>
 </resources>
