--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -607,10 +607,16 @@
     <string name="pref_geonav_update_interval_summary">The number of seconds between location updates.</string>
     <string name="pref_geonav_update_interval_title">Update Interval</string>
     <string name="pref_geonav_pair">Pair Device</string>
-    <string name="activity_collect_sensor_manager_failed">Failed to start sensor manager.</string>
-    <string name="activity_collect_geomagnetic_noise_detected">Interference detected, the compass might not be accurate.</string>
+    <string name="activity_collect_sensor_manager_failed">Failed to start sensor manager</string>
+    <string name="activity_collect_geomagnetic_noise_detected">Interference detected, the compass might not be accurate</string>
     <string name="activity_collect_geonav_starting">Starting GeoNav search.</string>
     <string name="pref_behavior_geonav_internal_gps_choice">Internal GPS</string>
     <string name="activity_collect_geonav_navigate">Navigate</string>
     <string name="menu_collect_start_geo_nav_title">Start GeoNav</string>
+    <string name="activity_collect_found_plot">Navigated to plot in vicinity</string>
+    <string name="menu_fields_plot_by_distance_title">Select plot by distance</string>
+    <string name="activity_field_editor_no_field_found">No coordinates could be found.</string>
+    <string name="activity_field_editor_switch_field">"Switch to field %s"</string>
+    <string name="activity_field_editor_switch_field_action">Switch</string>
+    <string name="activity_field_editor_no_location_yet">No location found yet.</string>
 </resources>
