--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -262,7 +262,7 @@
     <!-- Trait text and errors -->
     <string name="trait_layout_data_stored">Saved</string>
     <string name="trait_layout_print_title">Print Label</string>
-    <string name="trait_layout_print_status_title">Printer status</string>
+    <string name="trait_layout_print_status_title">Printer message</string>
     <string name="trait_layout_print_status">Retrieving connection status…</string>
     <string name="trait_layout_print_label_size_title">Size:</string>
     <string name="trait_layout_print_text_field_title">Text:</string>
@@ -552,6 +552,13 @@
 
     <string name="brapi_study_incompatible">This BrAPI study is currently incompatible with Field Book. Studies must include row and column in the header.</string>
 
+    <!--- Zebra printer errors -->
+    <string name="printer_open">Printer is open</string>
+    <string name="printer_paused">Printer is paused</string>
+    <string name="printer_empty">Printer is empty</string>
+    <string name="printer_not_connected">Printer not connected</string>
+    <string name="no_device_paired">No device paired</string>
+
     <string name="trait_labelprint_preview_description">Label preview.</string>
     <string name="trait_labelprint_zebraconnect_button_description">Button which navigates to Zebra Connect app.</string>
     <string name="trait_labelprint_print_button_description">Button which prints labels configured in this dialog.</string>
@@ -599,4 +606,6 @@
     <string name="choose_paired_bluetooth_devices_title">Choose your paired bluetooth device.</string>
     <string name="preferences_general_flip_flop_arrows_description">Swaps the trait and plot arrow functions</string>
     <string name="preferences_general_flip_flop_arrows">Flip Flop Arrows</string>
+    <string name="printer_success">Print success</string>
+    <string name="bluetooth_printer_choose_device_title">Choose bluetooth device to print from.</string>
 </resources>
