#309 added geonav preference to behavior #310 added geonav toolbar button in collect activity #312 added geonav option to navigate with internal gps or external device      added internal gps location acquisition to gnss trait #311 if import file has geo_coordinates column, they are saved to      observation_units.geo_coordinates #104 added toolbar button in field editor that selects the study with the closest observation_unit added rtk_sample.csv, simple single-plot input file that has a geo_coordinates column

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -619,4 +619,6 @@
     <string name="activity_field_editor_switch_field">"Switch to field %s"</string>
     <string name="activity_field_editor_switch_field_action">Switch</string>
     <string name="activity_field_editor_no_location_yet">No location found yet.</string>
+    <string name="activity_field_editor_switch_field_same">Closest field already selected.</string>
+    <string name="gps">GPS</string>
 </resources>
