Added audio when first rover location is found and geo nav is enabled. Updated connection threads to restart if failed. Added geo nav logger (documentation in GeodeticUtils) and preference Updated GPSTracker to allow different minimum updates Updated GeoNav internal GPS update times Added low pass filter to sensors used for compass Fixed bug in determining bearing Added preference to not use compass in GeoNav When GNSS trait delete button is pressed:     Delete obs unit geo_coordinates if observation is present     and delete observation value Added averaging switch to GNSS trait GNSS trait no longer auto connects to last device, to keep geo nav threads from conflicting Internal GPS accuracy is now used to truncate lat/lng decimals

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -635,4 +635,10 @@
     <string name="act_collect_study_names_empty">The selected study has empty unique, primary, or secondary names.</string>
     <string name="printer_success">Print success</string>
     <string name="bluetooth_printer_choose_device_title">Choose bluetooth device to print from.</string>
+    <string name="pref_geonav_compass_title">Use Compass</string>
+    <string name="pref_geonav_compass_summary">When enabled the user can point at plots relative to their position to select them. When disabled the selection is based on distance.</string>
+    <string name="pref_geonav_log_summary">Write GeoNav steps to a log file in \n storage/geonav/log.txt</string>
+    <string name="pref_geonav_log_title">GeoNav Log</string>
+    <string name="act_collect_geonav_first_location_found">Rover communications established.</string>
+    <string name="gnss_trait_averaging_switch_text">Average</string>
 </resources>
