--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -668,4 +668,5 @@
     <string name="trait_counter_layout_failed">Counter failed to save, please recreate this trait.</string>
     <string name="dialog_date_picker_neutral_button">Today</string>
     <string name="preferences_brapi_traits_title">BrAPI Variables</string>
+    <string name="act_collect_no_plots">This study has no plots saved.</string>
 </resources>
