--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -671,4 +671,9 @@
     <string name="act_trait_editor_menu_click_while_dragging">Please finish dragging.</string>
     <string name="act_brapi_auth_http_used">URLs must use https</string>
     <string name="act_collect_no_plots">This study has no plots saved.</string>
+    <string name="act_field_editor_load_file_failed">An error occurred during file load.</string>
+    <string name="error_making_directory">Failed to make directory.</string>
+    <string name="act_field_editor_file_open_failed">File failed to open.</string>
+    <string name="import_runnable_db_failed_to_switch">Database failed to switch fields.</string>
+    <string name="import_runnable_create_field_data_failed">Failed to create field data for line %d in file.</string>
 </resources>
