--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -671,4 +671,5 @@
     <string name="act_trait_editor_menu_click_while_dragging">Please finish dragging.</string>
     <string name="act_brapi_auth_http_used">URLs must use https</string>
     <string name="act_collect_no_plots">This study has no plots saved.</string>
+    <string name="scan_barcode">Scan Barcode</string>
 </resources>
