--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -671,4 +671,8 @@
     <string name="act_trait_editor_menu_click_while_dragging">Please finish dragging.</string>
     <string name="act_brapi_auth_http_used">URLs must use https</string>
     <string name="act_collect_no_plots">This study has no plots saved.</string>
+    <string name="trait_gnss_geo_coord_update_dialog_title">Coordinate Update Warning</string>
+    <string name="trait_gnss_geo_coord_update_dialog_message">You have a saved coordinate
+        for this unit, are you sure you want to update it?
+    </string>
 </resources>
