--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -675,4 +675,9 @@
     <string name="trait_gnss_geo_coord_update_dialog_message">You have a saved coordinate
         for this unit, are you sure you want to update it?
     </string>
+    <string name="trait_gnss_chip_manual_text">Manual</string>
+    <string name="trait_gnss_chip_10s_text">10s</string>
+    <string name="trait_gnss_chip_5s_text">5s</string>
+    <string name="gnss_trait_averaging_dialog_title">Averaging</string>
+    <string name="gnss_trait_averaging_dialog_message">Please wait while the points are collected.</string>
 </resources>
