--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -678,6 +678,6 @@
     <string name="trait_gnss_chip_manual_text">Manual</string>
     <string name="trait_gnss_chip_10s_text">10s</string>
     <string name="trait_gnss_chip_5s_text">5s</string>
-    <string name="gnss_trait_averaging_dialog_title">Averaging</string>
-    <string name="gnss_trait_averaging_dialog_message">Please wait while the points are collected.</string>
+    <string name="gnss_trait_averaging_dialog_title">Collecting coordinates</string>
+    <string name="gnss_trait_averaging_dialog_message">Please wait while the incoming locations are being averaged…</string>
 </resources>
