--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -634,10 +634,10 @@
     <string name="pref_behavior_geonav_category_title">GeoNav</string>
     <string name="pref_geonav_enable_summary">Enables usage of device location to navigate fields.</string>
     <string name="pref_geonav_enable_title">Enable GeoNav</string>
-    <string name="pref_geonav_search_angle_summary">GeoNav creates a cone in front of the user to detect which field to select.</string>
-    <string name="pref_geonav_search_angle_title">GeoNav Search Angle</string>
-    <string name="pref_geonav_update_interval_summary">The number of seconds between location updates.</string>
-    <string name="pref_geonav_update_interval_title">Update Interval</string>
+    <string name="pref_geonav_search_angle_summary">GeoNav creates a trapezoid in front of the user, the angle closest to the user is defined as %s°.</string>
+    <string name="pref_geonav_search_angle_title">GeoNav Search Angle (degrees)</string>
+    <string name="pref_geonav_update_interval_summary">The time between location updates is %ss.</string>
+    <string name="pref_geonav_update_interval_title">Update Interval (s)</string>
     <string name="pref_geonav_pair">Pair Device</string>
     <string name="activity_collect_sensor_manager_failed">Failed to start sensor manager</string>
     <string name="activity_collect_geomagnetic_noise_detected">Interference detected, the compass might not be accurate</string>
@@ -674,11 +674,12 @@
     <string name="preference_geonav_title">GeoNav</string>
     <string name="pref_geonav_method_distance">Distance</string>
     <string name="pref_geonav_method_trapezoid">Trapezoidal</string>
-    <string name="pref_geonav_search_method_summary">The method used to search for plots in GeoNav.</string>
+    <string name="pref_geonav_search_method_summary">The %s method used to search for plots in GeoNav.</string>
     <string name="pref_geonav_search_method_title">Search Method</string>
     <string name="pref_behavior_geonav_parameters_category_title">Parameters</string>
-    <string name="pref_geonav_search_trapezoid_d1_summary">The distance defining the shorter base of the trapezoid.</string>
-    <string name="pref_geonav_search_trapezoid_d1_title">Trapezoid Base</string>
-    <string name="pref_geonav_search_trapezoid_d2_summary">The distance from the user to the opposite end of the trapezoid.</string>
-    <string name="pref_geonav_search_trapezoid_d2_title">Trapezoid Distance</string>
+    <string name="pref_geonav_search_trapezoid_d1_summary">The shorter base of the trapezoid is %s km.</string>
+    <string name="pref_geonav_search_trapezoid_d1_title">Trapezoid Base (km)</string>
+    <string name="pref_geonav_search_trapezoid_d2_summary">The distance from the user to the opposite end of the trapezoid is %s km.</string>
+    <string name="pref_geonav_search_trapezoid_d2_title">Trapezoid Distance (km)</string>
+    <string name="preferences_geonav_title">GeoNav</string>
 </resources>
