--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -701,4 +701,18 @@
     <string name="trait_gnss_chip_5s_text">5s</string>
     <string name="gnss_trait_averaging_dialog_title">Collecting coordinates</string>
     <string name="gnss_trait_averaging_dialog_message">Please wait while the incoming locations are being averaged…</string>
+
+    <!-- storage definer and migrator fragments -->
+    <string name="frag_storage_definer_title">Storage Definer</string>
+    <string name="frag_storage_definer_summary">With the latest version of Android, users must grant access to use folders within apps. This step is optional if you don\'t want data to persist after deleting or reinstalling the app.</string>
+    <string name="define">Define</string>
+    <string name="pref_storage_definer_title">Define Storage Location</string>
+    <string name="pref_storage_definer_summary">Choose a location on your system to save files to.</string>
+    <string name="migrate">Migrate</string>
+    <string name="frag_storage_migrator_title">Storage Migrator</string>
+    <string name="frag_storage_migrator_summary">Coordinate files were not found. Choosing migrate will allow you to select your old Coordinate folder to transfer the data.</string>
+    <string name="skip">Skip</string>
+    <string name="document_tree_undefined">Would you like to define the Field Book folder?</string>
+    <string name="error_dtu_dir_not_created">Directory %s could not be created.</string>
+
 </resources>
