--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -701,4 +701,5 @@
     <string name="trait_gnss_chip_5s_text">5s</string>
     <string name="gnss_trait_averaging_dialog_title">Collecting coordinates</string>
     <string name="gnss_trait_averaging_dialog_message">Please wait while the incoming locations are being averaged…</string>
+    <string name="brapi_chunk_size">Chunk Size</string>
 </resources>
