--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="permission_rationale_storage_export">Exporting data requires access to the device\'s files.</string>
     <string name="permission_rationale_trait_features">Collecting data requires access to the device\'s files, microphone, and camera.</string>
     <string name="permission_rationale_file_creation">Creating sample files and directories requires access to the device\'s files.</string>
+    <string name="permission_rationale_bluetooth">Bluetooth features require connecting to other devices.</string>
 
     <!-- Miscellaneous  -->
     <string name="fields_name">Field Name</string>
@@ -703,4 +704,7 @@
     <string name="gnss_trait_averaging_dialog_message">Please wait while the incoming locations are being averaged…</string>
     <string name="import_runnable_duplicates_skipped">Duplicate columns found, only first instance will be used.</string>
     <string name="brapi_chunk_size">Chunk Size</string>
+
+    <string name="permission_ask_bluetooth">Please accept bluetooth permissions.</string>
+
 </resources>
