Added message when a barcode is found in another study. issue #184

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -706,5 +706,6 @@
     <string name="brapi_chunk_size">Chunk Size</string>
 
     <string name="permission_ask_bluetooth">Please accept bluetooth permissions.</string>
+    <string name="act_collect_barcode_search_exists_in_other_field">Please switch to field %s</string>
 
 </resources>
