--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -707,5 +707,8 @@
     <string name="brapi_chunk_size">Chunk Size</string>
 
     <string name="permission_ask_bluetooth">Please accept bluetooth permissions.</string>
+    <string name="dialog_new_trait_add_cat_button_text">Add</string>
+    <string name="traits_create_categories_label_text">Enter category label here</string>
+    <string name="traits_create_categories_value_text">Enter category value here</string>
 
 </resources>
