--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -713,4 +713,22 @@
     <string name="pref_profile_crashlytics_refresh_title">Refresh ID</string>
     <string name="pref_profile_crashlytics_refresh_summary">This will assign a new unique ID.</string>
 
+    <!-- languages, not to be translated -->
+    <string name="language_en" translatable="false">English</string>
+    <string name="language_am" translatable="false">አማርኛ</string>
+    <string name="language_ar" translatable="false">اَلْعَرَبِيَّةُ</string>
+    <string name="language_bn" translatable="false">বাংলা</string>
+    <string name="language_de" translatable="false">Deutsche</string>
+    <string name="language_es" translatable="false">Español</string>
+    <string name="language_fr" translatable="false">Français</string>
+    <string name="language_hi" translatable="false">हिन्दी</string>
+    <string name="language_it" translatable="false">Italiana</string>
+    <string name="language_ja" translatable="false">日本語</string>
+    <string name="language_om_rET" translatable="false">Afaan Oromoo</string>
+    <string name="language_pt_rBR" translatable="false">Português</string>
+    <string name="language_ru" translatable="false">Русский</string>
+    <string name="language_zh_rCN" translatable="false">简体字</string>
+    <string name="language">Language</string>
+    <string name="preference_language_default">System Language</string>
+
 </resources>
