--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -707,20 +707,20 @@
     <string name="brapi_chunk_size">Chunk Size</string>
 
     <string name="permission_ask_bluetooth">Please accept bluetooth permissions.</string>
-    <string name="pref_general_location_collection_title">Automatic location collection</string>
-    <string name="pref_general_location_collection_summary">Select a method for collecting location.</string>
-    <string name="pref_general_location_collection_off_summary">This setting does not collect location.</string>
-    <string name="pref_general_location_collection_study_summary">Collects a location for the first observation on a field/study.</string>
-    <string name="pref_general_location_collection_summary_obs_units">Observation locations are only collected once per observation unit.</string>
-    <string name="pref_general_location_collection_summary_obs">Observation locations are collected per phenotype.</string>
-    <string name="pref_general_location_collection_obs_dialog_title">This setting may increase battery consumption.</string>
+    <string name="pref_general_location_collection_title">Location collected</string>
+    <string name="pref_general_location_collection_summary">Select a method for collecting location while using Field Book.</string>
+    <string name="pref_general_location_collection_off_summary">No location data will be collected for any phenotypes.</string>
+    <string name="pref_general_location_collection_study_summary">A location will be collected for the first the phenotype within a field.</string>
+    <string name="pref_general_location_collection_summary_obs_units">A location will be collected for the first phenotype in a plot.</string>
+    <string name="pref_general_location_collection_summary_obs">A location will be collected for every phenotype that is collected.</string>
+    <string name="pref_general_location_collection_obs_dialog_title">This setting may substantially increase battery consumption.</string>
 
     <!-- location acquisition preference -->
     <string name="preferences_general_skip_entries_default">Default</string>
     <string name="location_level_off">Off</string>
-    <string name="location_level_study">Study</string>
-    <string name="location_level_observation_unit">Observation Unit</string>
-    <string name="location_level_observation">Observation</string>
+    <string name="location_level_study">Field / Study</string>
+    <string name="location_level_observation_unit">Plot / Observation Unit</string>
+    <string name="location_level_observation">Phenotype / Observation</string>
 
     <string name="preferences_profile_crashlytics">Crashlytics</string>
     <string name="pref_profile_crashlytics_user_id_enabled">Unique ID</string>
