Initial commit of sync observation code.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -562,6 +562,10 @@
     <string name="brapi_error_saving_all_traits">Error saving traits. No traits were saved.</string>
     <string name="brapi_error_saving_some_traits">Error saving some traits. Some traits were not saved</string>
     <string name="brapi_traits_saved_success">Selected traits saved successfully.</string>
+    <string name="brapi_obs_sync_menu_name">Sync Observations</string>
+    <string name="brapi_obs_header_name">Downloading Observations for Study:</string>
+    <string name="number_traits_label">Number of Traits:</string>
+    <string name="number_observation_label">Number of Observations:</string>
     <string name="device_offline_warning">Device Offline: Please connect to a network and try again</string>
     <string name="next">Next</string>
     <string name="prev">Prev</string>
