--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="fields_update_sort_study">Update Sorting</string>
     <string name="fields_delete_study_confirmation">Are you sure you want to delete this field? This will delete all data from this field.</string>
     <string name="fields_study_exists_message">This field already exists.</string>
+    <string name="fields_study_and_obs_exists_message">This field is already imported at this observation level.</string>
     <string name="fields_select_study">Select or import a field.</string>
     <string name="fields_date_imported">Import date</string>
     <string name="fields_date_edited">Edit date</string>
