--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -785,5 +785,12 @@
     <string name="delete_photo_dialog_iv_content_description">Photo to be deleted.</string>
     <string name="trait_usb_camera_capture_content_description">Capture a photo.</string>
     <string name="trait_usb_camera_capture_button_text">Capture</string>
+    <string name="dialog_field_sort_header_tv">Please add the attributes to sort plots by. Drag items to change the sort order.</string>
+    <string name="dialog_field_sort_add_btn_text">Add</string>
+    <string name="list_item_field_sort_delete_content_description">Delete the sort attribute.</string>
+    <string name="dialog_field_sort_title">Field Attribute Sort Order</string>
+    <string name="list_item_field_sort_drag_content_description">Drag to move item.</string>
+    <string name="dialog_field_sort_no_attributes_found">No attributes found.</string>
+    <string name="dialog_field_sort_no_more_attributes_found">All attributes have been used.</string>
 
 </resources>
