--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -787,9 +787,10 @@
     <string name="trait_usb_camera_capture_button_text">Capture</string>
     <string name="fragment_summary_toolbar_title">Summary</string>
     <string name="menu_fragment_summary_filter_title">Filter</string>
-    <string name="fragment_summary_filter_title">Filter attributes and traits to show in summary</string>
+    <string name="fragment_summary_filter_title">Select summary labels</string>
     <string name="dialog_fragment_summary_neutral_button">Toggle All</string>
     <string name="fragment_summary_prev_button_text">Previous</string>
     <string name="fragment_summary_next_button_text">Next</string>
+    <string name="list_item_summary_nav_button_content_description">Navigates to the selected entry.</string>
 
 </resources>
