--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -813,5 +813,12 @@
     <string name="dialog_field_sort_delete_all_content_description">Deletes all sort entries.</string>
     <string name="dialog_field_sort_toggle_order_content_description">Reverses sort order.</string>
     <string name="dialog_field_sort_add_content_description">Opens a dialog to add a new attribute to sort by.</string>
+    <string name="view_range_box_left_button_content_description">Navigates to previous plot.</string>
+    <string name="view_range_box_right_button_content_description">Navigates to the next plot.</string>
+    <string name="act_collect_delete_value_button_content_description">Delete the current value.</string>
+    <string name="act_collect_barcode_button_content_description">Start a barcode scanner.</string>
+    <string name="act_collect_na_value_button_content_description">Fill value with not applicable.</string>
+    <string name="view_trait_box_right_content_description">Go to next trait.</string>
+    <string name="view_trait_box_left_content_description">Go to previous trait.</string>
 
 </resources>
