--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -544,7 +544,8 @@
     <string name="activity_collect_dialog_neutral_button">Don\'t ask again</string>
     <string name="activity_collect_dialog_new_collector">Do you want to save the name of the person collecting data?</string>
 
-    <string name="pref_profile_title">Verify person every 24 hours.</string>
+    <string name="pref_profile_title">Require Person</string>
+    <string name="pref_profile_require_interval_title">Time between verification</string>
 
     <!-- Field Creator Dialog -->
     <string name="dialog_field_creator_ask_size">Please choose a field name and size.</string>
